# sap-voice-reconstruction

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
cluster/slurm/: train_vtn.slurm  train_vtn_multigpu.slurm
docs/: VTN_architecture_and_experiments.md  sap_data_foundation_contract.md  testing_approach.md
sap/: __init__.py
sap/data/: features.py  manifest.py  vocoder.py
sap/models/backbone/: __init__.py  activation.py  embedding.py  scaling.py  transformer.py  utils.py
sap/models/vc/vtn/: losses.py  model.py  modules.py  trainer.py
scripts/: infer_vtn.py  metrics_to_tb.py  train_vtn.py  vtn_overfit_demo.py  watch_vtn.sh
tests/: conftest.py  test_backbone.py  test_features.py  test_manifest.py  test_trainer.py  test_vocoder.py  test_vtn_model.py  test_vtn_modules.py  test_vtn_real.py
tests/fixtures/: vtn_pairs.jsonl
