[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sap-voice-reconstruction"
version = "0.0.0"
description = "Consolidated implementation for atypical-speech voice reconstruction in the SAP setting (Phase 1: VTN-style direct VC + cascaded ASR->TTS)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "TBD" }
dependencies = [
    "numpy",
    "torch",       # CPU build OK for tests; install via the pytorch cpu index if needed
    "torchaudio",
    "soundfile",
    "lhotse",      # SAP Step-6 manifest data path (sap/data/manifest.py)
    "urllib3",     # lhotse import dependency not always pulled transitively
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["sap*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
